[package]
name = "kvs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
assert_cmd = "0.11.0"
predicates = "1.0.0"
clap = "4.0.2"
tempfile = "3.0.7"
walkdir = "2.2.7"
failure = "0.1.8"
failure_derive = "0.1.8"
serde = "1.0.145"
serde_json = "1.0.85"
log = "0.4.17"
filename = "0.1.1"
env_logger = "0.9.1"